--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
 pandas==0.15.2
+blinker>=1.8.2
+click>=8.1.7
+Flask>=3.0.3
+Flask-Cors>=4.0.1
+itsdangerous>=2.2.0
+Jinja2>=3.1.4
+MarkupSafe>=2.1.5
+progressbar>=2.5
+sqlitedict>=2.1.0
+waitress>=3.0.0
+Werkzeug>=3.0.3
